--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
 		"test:watch": "jest --watch",
 		"test:cov": "jest --coverage",
 		"test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-		"test:e2e": "jest --config ./test/jest-e2e.json"
+		"test:e2e": "jest --config ./test/jest-e2e.json",
+		"seed": "ts-node seeder/seed.ts"
 	},
 	"dependencies": {
+		"@faker-js/faker": "^9.0.3",
 		"@nestjs-modules/mailer": "^1.10.3",
 		"@nestjs/common": "^10.4.4",
 		"@nestjs/config": "^3.2.3",
@@ -29,7 +31,7 @@
 		"@nestjs/passport": "^10.0.3",
 		"@nestjs/platform-express": "^10.4.5",
 		"@nestjs/serve-static": "^4.0.2",
-		"@prisma/client": "^5.20.0",
+		"@prisma/client": "^5.21.1",
 		"argon2": "^0.41.1",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.1",
