--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@nestjs/passport": "^10.0.3",
 		"@nestjs/platform-express": "^10.4.5",
 		"@nestjs/serve-static": "^4.0.2",
+		"@nestjs/swagger": "^8.0.1",
 		"@prisma/client": "^5.21.1",
 		"argon2": "^0.41.1",
 		"class-transformer": "^0.5.1",
@@ -42,6 +43,7 @@
 		"reflect-metadata": "^0.2.0",
 		"rxjs": "^7.8.1",
 		"serve-static": "^1.16.2",
+		"swagger-ui-express": "^5.0.1",
 		"uuid": "^10.0.0"
 	},
 	"overrides": {
