--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
 		"seed": "ts-node seeder/seed.ts"
 	},
 	"dependencies": {
+		"@adminjs/express": "^6.1.0",
+		"@adminjs/nestjs": "^6.1.0",
+		"@adminjs/prisma": "^5.0.3",
+		"@adminjs/typeorm": "^5.0.1",
 		"@faker-js/faker": "^9.0.3",
-		"@nestjs-modules/mailer": "^1.10.3",
+		"@nestjs-modules/mailer": "^2.0.2",
 		"@nestjs/common": "^10.4.4",
 		"@nestjs/config": "^3.2.3",
 		"@nestjs/core": "^10.4.4",
@@ -33,11 +37,11 @@
 		"@nestjs/serve-static": "^4.0.2",
 		"@nestjs/swagger": "^8.0.1",
 		"@prisma/client": "^5.21.1",
+		"adminjs": "^7.8.13",
 		"argon2": "^0.41.1",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.1",
 		"cookie-parser": "^1.4.7",
-		"nodemailer": "^6.9.15",
 		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1",
 		"reflect-metadata": "^0.2.0",
