--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"cSpell.words": ["isnotnull", "nlike", "resave", "uuidv"]
+	"cSpell.words": ["batushka", "isnotnull", "nlike", "resave", "uuidv"]
 }
