--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL = "mysql://root:12345678@localhost:3306/usofDB?schema=public"
+DATABASE_URL = "mysql://user:password@localhost:3306/usofDB?schema=public"
 
 JWT_SECRET = "your-jwt-secret"
 
